--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,9 +1,9 @@
 <nav
   class="navbar navbar-expand-lg fixed-top"
->
+  [class.stateScroll]="stateScroll">
   <div class="container">
     <a class="navbar-brand logo" href="#home">
-        <img src="../../../assets/images/san_lorenzo.png" alt="San Lorenzo">
+      Compleet labs
     </a>
     <button
       class="navbar-toggler"
@@ -27,7 +27,7 @@
       </svg>
     </button>
     <div class="collapse navbar-collapse" id="navbarNavDropdown">
-      <ul class="navbar-nav">
+      <ul class="navbar-nav ms-auto">
         <li class="nav-item">
           <a
             class="nav-link"
@@ -35,34 +35,57 @@
             href="#home"
             (click)="selectOption('home')"
             [ngClass]="{ active: option == 'home' }"
-            >Inicio</a
+            >Home</a
           >
         </li>
         <li class="nav-item">
           <a
             class="nav-link"
-            href="#about-me"
-            (click)="selectOption('about-me')"
-            [ngClass]="{ active: option == 'about-me' }"
-            >Sobre mí</a
+            href="#services"
+            (click)="selectOption('services')"
+            [ngClass]="{ active: option == 'services' }"
+            >Services</a
           >
         </li>
         <li class="nav-item">
           <a
             class="nav-link"
-            href="#skill"
-            (click)="selectOption('skill')"
-            [ngClass]="{ active: option == 'skill' }"
-            >Skills</a
+            href="#technology"
+            (click)="selectOption('technology')"
+            [ngClass]="{ active: option == 'technology' }"
+            >Technology</a
           >
         </li>
         <li class="nav-item">
           <a
             class="nav-link"
-            href="#work"
-            (click)="selectOption('work')"
-            [ngClass]="{ active: option == 'work' }"
-            >Trabajos</a
+            href="#case-studies"
+            (click)="selectOption('case-studies')"
+            [ngClass]="{ active: option == 'case-studies' }"
+            >Case studies</a
+          >
+        </li>
+        <li class="nav-item">
+          <a
+            class="nav-link"
+            href="#about"
+            (click)="selectOption('about')"
+            [ngClass]="{ active: option == 'about' }"
+            >About</a
+          >
+        </li>
+        <li class="nav-item">
+          <a
+            class="nav-link d-flex opacity-1"
+            href="#hire-us"
+            (click)="selectOption('hire-us')"
+            [ngClass]="{ active: option == 'hire-us' }"
+            ><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 576 512" width="15">
+              <path fill="#FFFFFF" d="M512 80c8.8 0 16 7.2 16 16V416c0 8.8-7.2 16-16 16H64c-8.8 0-16-7.2-16-16V96c0-8.8 7.2-16 16-16H512zM64 32C28.7 32 0 60.7 0 96V416c0 35.3 28.7 64 64 64H512c35.3 0 64-28.7 64-64V96c0-35.3-28.7-64-64-64H64zM208 256a64 64 0 1 0 0-128 64 64 0 1 0 0 128zm-32 32c-44.2 0-80 35.8-80 80c0 8.8 7.2 16 16 16H304c8.8 0 16-7.2 16-16c0-44.2-35.8-80-80-80H176zM376 144c-13.3 0-24 10.7-24 24s10.7 24 24 24h80c13.3 0 24-10.7 24-24s-10.7-24-24-24H376zm0 96c-13.3 0-24 10.7-24 24s10.7 24 24 24h80c13.3 0 24-10.7 24-24s-10.7-24-24-24H376z"/>
+            </svg>
+            <div class="ms-2"> 
+            Hire us
+          </div></a
           >
         </li>
       </ul>
