--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,3 +1,27 @@
 <section id="home" class="home">
-    
+    <div class="container">
+        <div class="row">
+            <div class="col-12 col-md-6">
+                <div class="home-container-text">
+                    <h1 class="home-title">
+                        We build beautiful and reliable web solutions
+                    </h1>
+                    <div class="home-text">
+                        We strongly believe that communication, trust and transparency 
+                        are the essential elements of successful business relationship.<br>
+                        Ready for the journey?
+                    </div>
+                    <div class="home-container-buttons">
+                        <button type="button" class="btn btn-secondary">Learn more</button>
+                        <button type="button" class="btn btn-primary">
+                            Our Projects 
+                            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512" width="10">
+                                <path fill="#FFFFFF" d="M438.6 278.6c12.5-12.5 12.5-32.8 0-45.3l-160-160c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L338.8 224 32 224c-17.7 0-32 14.3-32 32s14.3 32 32 32l306.7 0L233.4 393.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0l160-160z"/></svg>
+                        </button>
+                    </div>
+                </div>
+            </div>
+            <div class="col-12 col-md-6"></div>
+        </div>
+    </div>
 </section>
