agrego bloque de nuestros servicios

--- a/src/app/pages/home/home.component.css
+++ b/src/app/pages/home/home.component.css
@@ -13,7 +13,7 @@
     font-size: 3rem;
 }
 .home-text{
-    font-family: CircularStd-Medium;
+    font-family: 'CircularStd-Medium';
     opacity: 0.5;
     padding: 0 10px 20px 0;
 }
