--- a/src/app/pages/our-services/our-services.component.css
+++ b/src/app/pages/our-services/our-services.component.css
@@ -1,3 +1,41 @@
+.our-services-card{
+    background-color: #FFF;
+    padding: 50px;
+    border-radius: 3px;
+    margin-bottom: 10px;
+}
 .our-services{
     height: 50vh;
+    font-family: 'CircularStd-Medium';
+    color: #9399a2;    
+}
+h1.our-services-title{
+    color: #FFFFFF;
+}
+h4.our-services-card-title{
+    text-align: center;
+    font-size: 1.2rem;
+    color: #000000;
+}
+.our-services-card-text{
+    text-align: center;
+    padding: 0 0 40px 0;
+}
+.our-services-card-button{
+    display: flex;
+    justify-content: center;
+}
+.our-services-card-container-icon{
+    display: flex;
+    justify-content: center;
+    padding: 0 0 30px 0;
+}
+.our-services-card-icon{
+    width: 60px;
+    height: 60px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #3871ff;
+    border-radius: 50%;
 }
