--- a/src/app/pages/our-services/our-services.component.html
+++ b/src/app/pages/our-services/our-services.component.html
@@ -1,3 +1,76 @@
 <section id="our-services" class="our-services">
-    
+    <div class="container text-center">
+        <h1 class="our-services-title">Our services</h1>
+        <div>
+            We feel very strong about our skills when it comes to planning, designing <br> 
+            and coding applications. Here is what we love to do!
+        </div>
+    </div>
+    <div class="container">
+        <div class="row">
+            <div class="col-12 col-md-4">
+                <div class="our-services-card">
+                    <div class="our-services-card-container-icon">
+                        <div class="our-services-card-icon">
+                            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 384 512" width="20">
+                                <path fill="#FFFFFF" d="M64 464c-8.8 0-16-7.2-16-16V64c0-8.8 7.2-16 16-16H224v80c0 17.7 14.3 32 32 32h80V448c0 8.8-7.2 16-16 16H64zM64 0C28.7 0 0 28.7 0 64V448c0 35.3 28.7 64 64 64H320c35.3 0 64-28.7 64-64V154.5c0-17-6.7-33.3-18.7-45.3L274.7 18.7C262.7 6.7 246.5 0 229.5 0H64zm56 256c-13.3 0-24 10.7-24 24s10.7 24 24 24H264c13.3 0 24-10.7 24-24s-10.7-24-24-24H120zm0 96c-13.3 0-24 10.7-24 24s10.7 24 24 24H264c13.3 0 24-10.7 24-24s-10.7-24-24-24H120z"/></svg>
+                        </div>
+                    </div>
+                    <h4 class="our-services-card-title">
+                        Business & Product Concept
+                    </h4>
+                    <div class="our-services-card-text">
+                        Lorem Ipsum es simplemente el texto de relleno de las imprentas y archivos de texto. Lorem Ipsum ha sido el texto de relleno estándar de las industrias desde el año 1500.
+                    </div>
+                    <div class="our-services-card-button">
+                        <button class="btn btn-secondary">
+                            Learn more
+                        </button>
+                    </div>
+                </div>
+            </div>
+            <div class="col-12 col-md-4">
+                <div class="our-services-card">
+                    <div class="our-services-card-container-icon">
+                        <div class="our-services-card-icon">
+                            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 576 512" width="30">
+                                <path fill="#FFFFFF" d="M64 0C28.7 0 0 28.7 0 64V352c0 35.3 28.7 64 64 64H240l-10.7 32H160c-17.7 0-32 14.3-32 32s14.3 32 32 32H416c17.7 0 32-14.3 32-32s-14.3-32-32-32H346.7L336 416H512c35.3 0 64-28.7 64-64V64c0-35.3-28.7-64-64-64H64zM512 64V288H64V64H512z"/></svg>                        
+                            </div>
+                    </div>
+                    <h4 class="our-services-card-title">
+                        Web & Mobile Development
+                    </h4>
+                    <div class="our-services-card-text">
+                        Lorem Ipsum es simplemente el texto de relleno de las imprentas y archivos de texto. Lorem Ipsum ha sido el texto de relleno estándar de las industrias desde el año 1500.
+                    </div>
+                    <div class="our-services-card-button">
+                        <button class="btn btn-secondary">
+                            Learn more
+                        </button>
+                    </div>
+                </div>
+            </div>
+            <div class="col-12 col-md-4">
+                <div class="our-services-card">
+                    <div class="our-services-card-container-icon">
+                        <div class="our-services-card-icon">
+                            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" width="20">
+                                <path fill="#FFFFFF" d="M362.7 19.3L314.3 67.7 444.3 197.7l48.4-48.4c25-25 25-65.5 0-90.5L453.3 19.3c-25-25-65.5-25-90.5 0zm-71 71L58.6 323.5c-10.4 10.4-18 23.3-22.2 37.4L1 481.2C-1.5 489.7 .8 498.8 7 505s15.3 8.5 23.7 6.1l120.3-35.4c14.1-4.2 27-11.8 37.4-22.2L421.7 220.3 291.7 90.3z"/></svg>
+                        </div>
+                    </div>
+                    <h4 class="our-services-card-title">
+                        UX & UI Design
+                    </h4>
+                    <div class="our-services-card-text">
+                        Lorem Ipsum es simplemente el texto de relleno de las imprentas y archivos de texto. Lorem Ipsum ha sido el texto de relleno estándar de las industrias desde el año 1500.
+                    </div>
+                    <div class="our-services-card-button">
+                        <button class="btn btn-secondary">
+                            Learn more
+                        </button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </section>
