completo servicios y termino tecnologias

--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -41,9 +41,9 @@
         <li class="nav-item">
           <a
             class="nav-link"
-            href="#services"
-            (click)="selectOption('services')"
-            [ngClass]="{ active: option == 'services' }"
+            href="#our-services"
+            (click)="selectOption('our-services')"
+            [ngClass]="{ active: option == 'our-services' }"
             >Services</a
           >
         </li>
