--- a/src/app/pages/our-services/our-services.component.html
+++ b/src/app/pages/our-services/our-services.component.html
@@ -1,7 +1,7 @@
 <section id="our-services" class="our-services">
     <div class="container text-center">
         <h1 class="our-services-title">Our services</h1>
-        <div>
+        <div class="our-services-text">
             We feel very strong about our skills when it comes to planning, designing <br> 
             and coding applications. Here is what we love to do!
         </div>
