--- a/src/app/pages/our-services/our-services.component.css
+++ b/src/app/pages/our-services/our-services.component.css
@@ -5,9 +5,16 @@
     margin-bottom: 10px;
 }
 .our-services{
-    height: 50vh;
+    height: initial;
     font-family: 'CircularStd-Medium';
-    color: #9399a2;    
+    color: #9399a2;
+    padding: 0 0 30px 0;    
+}
+@media (min-width: 768px) {
+    .our-services{
+        height: 55vh;   
+        padding: 0 0 0 0; 
+    }
 }
 h1.our-services-title{
     color: #FFFFFF;
@@ -38,4 +45,7 @@ h4.our-services-card-title{
     align-items: center;
     background-color: #3871ff;
     border-radius: 50%;
+}
+.our-services-text{
+    padding: 0 0 50px 0;
 }
