agrego libreria aos para animaciones de componentes

--- a/src/app/pages/case-studies/case-studies.component.html
+++ b/src/app/pages/case-studies/case-studies.component.html
@@ -1,7 +1,7 @@
 <section id="case-studies" class="case-studies">
   <div class="container">
-    <h5 class="case-studies-title">Clients we worked with</h5>
-    <div>
+    <h5 class="case-studies-title" data-aos="fade-up" data-aos-offset="200">Clients we worked with</h5>
+    <div data-aos="fade-up" data-aos-offset="200">
       <swiper-container
         loop="true"
         slides-per-view="5"
@@ -75,8 +75,8 @@
     </div>
   </div>
 
-  <div class="container case-studies-cards">
-    <div class="row">
+  <div class="container case-studies-cards" >
+    <div class="row" data-aos="fade-up" data-aos-offset="200">
       <div class="col-12 col-md-6">
         <div class="case-studies-card">
           <h1 class="case-studies-card-title">Get in touch with us</h1>
