--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -2,7 +2,9 @@
     <div class="container">
         <div class="row">
             <div class="col-12 col-md-6">
-                <div class="home-container-text">
+                <div class="home-container-text" data-aos="fade-right"
+                data-aos-offset="200"
+                data-aos-easing="ease-in-sine">
                     <h1 class="home-title">
                         We build beautiful and reliable web solutions
                     </h1>
