--- a/src/app/pages/our-services/our-services.component.html
+++ b/src/app/pages/our-services/our-services.component.html
@@ -1,13 +1,13 @@
 <section id="our-services" class="our-services">
     <div class="container text-center">
-        <h1 class="our-services-title">Our services</h1>
-        <div class="our-services-text">
+        <h1 class="our-services-title" data-aos="fade-up" data-aos-offset="200">Our services</h1>
+        <div class="our-services-text" data-aos="fade-up" data-aos-offset="200">
             We feel very strong about our skills when it comes to planning, designing <br> 
             and coding applications. Here is what we love to do!
         </div>
     </div>
     <div class="container">
-        <div class="row">
+        <div class="row" data-aos="fade-up" data-aos-offset="200">
             <div class="col-12 col-md-4">
                 <div class="our-services-card">
                     <div class="our-services-card-container-icon">
