--- a/src/app/pages/technology/technology.component.html
+++ b/src/app/pages/technology/technology.component.html
@@ -1,5 +1,5 @@
 <section id="technology" class="technology">
-  <div class="container">
+  <div class="container" data-aos="fade-up" data-aos-offset="200">
     <div class="row">
       <div class="col-12 col-md-6">
         <div>
