--- a/src/app/pages/case-studies/case-studies.component.html
+++ b/src/app/pages/case-studies/case-studies.component.html
@@ -1,73 +1,68 @@
-<section id="case-studies" class="case-studies">
+<section id="case-studies" class="case-studies section">
   <div class="container">
     <h5 class="case-studies-title" data-aos="fade-up" data-aos-offset="200">Clients we worked with</h5>
     <div data-aos="fade-up" data-aos-offset="200">
       <swiper-container
         loop="true"
-        slides-per-view="5"
+        slides-per-view="2"
         speed="1000"
         autoplay="true"
         pagination="true"
         pagination-clickable="true"
+        [breakpoints]="breakpoints"
       >
-        <swiper-slide lazy="true">
+        <swiper-slide>
           <div class="swiper-slide-item">
             <img
               class="swiper-slide-img"
               src="../../../assets/images/case-studies/tnw.png"
               alt="tnw"
-              loading="lazy"
             />
           </div>
         </swiper-slide>
-        <swiper-slide lazy="true">
+        <swiper-slide>
           <div class="swiper-slide-item">
             <img
               class="swiper-slide-img"
               src="../../../assets/images/case-studies/google.png"
               alt="google"
-              loading="lazy"
             />
           </div>
         </swiper-slide>
-        <swiper-slide lazy="true">
+        <swiper-slide>
           <div class="swiper-slide-item">
             <img
               class="swiper-slide-img"
               src="../../../assets/images/case-studies/nike.png"
               alt="nike"
-              loading="lazy"
             />
           </div>
         </swiper-slide>
-        <swiper-slide lazy="true">
+        <swiper-slide>
           <div class="swiper-slide-item">
             <img
               class="swiper-slide-img"
               src="../../../assets/images/case-studies/airbnb.png"
               alt="airbnb"
-              loading="lazy"
             />
           </div>
         </swiper-slide>
 
-        <swiper-slide lazy="true">
+        <swiper-slide>
           <div class="swiper-slide-item">
             <img
               class="swiper-slide-img"
               src="../../../assets/images/case-studies/it-news-africa.png"
               alt="it-news-africa"
-              loading="lazy"
             />
           </div>
         </swiper-slide>
-        <swiper-slide lazy="true">
+        <swiper-slide>
           <div class="swiper-slide-item">
             <img
               class="swiper-slide-img"
               src="../../../assets/images/case-studies/airbnb.png"
               alt="airbnb"
-              loading="lazy"
             />
           </div>
         </swiper-slide>
