--- a/src/app/pages/our-services/our-services.component.html
+++ b/src/app/pages/our-services/our-services.component.html
@@ -1,4 +1,4 @@
-<section id="our-services" class="our-services">
+<section id="our-services" class="our-services section">
     <div class="container text-center">
         <h1 class="our-services-title" data-aos="fade-up" data-aos-offset="200">Our services</h1>
         <div class="our-services-text" data-aos="fade-up" data-aos-offset="200">
