--- a/src/styles.css
+++ b/src/styles.css
@@ -58,3 +58,9 @@ body{
     color: #FFFFFF !important;
     border: 1px solid #FFFFFFFF !important;
 }
+.section::before {
+    content: "";
+    width: 100%;
+    height: 100px;
+    display: block;
+}
