datos de contacto

--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -6,7 +6,8 @@
         <div class="footer-text">
           Lorem Ipsum is simply dummy text of the printing and typesetting
           industry. Lorem Ipsum has been the industry's standard dummy text ever
-          since the 1500s
+          since the 1500s<br>
+          Autor: <a href="mailto:jesustissera@gmail.com">jesustissera&commat;gmail</a>
         </div>
         <div class="footer-list">
           <ul>
