completo nombre de mail

--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -7,7 +7,7 @@
           Lorem Ipsum is simply dummy text of the printing and typesetting
           industry. Lorem Ipsum has been the industry's standard dummy text ever
           since the 1500s<br>
-          Autor: <a href="mailto:jesustissera@gmail.com">jesustissera&commat;gmail</a>
+          Autor: <a class="" href="mailto:jesustissera@gmail.com">jesustissera&commat;gmail.com</a>
         </div>
         <div class="footer-list">
           <ul>
